--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
     "nodemon": "^2.0.21",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-scripts": "^5.0.1"
   }
 }
